--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -174,25 +174,24 @@ footer
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.7em;
+    gap: 1.5em;
     border-bottom: 1px solid black;
-    color: red;
-    cursor: pointer;
-    font-size: 10px;
     padding: 5px 0;
 }
 
-.social 
+.social-icons .social-fa 
 {
-  border: 1px solid red;
-  background-color: black;
-  height: 15px;
-  width: 15px;
+  border: 1px solid black;
+  background-color: inherit;
+  height: 18px;
+  width: 18px;
   border-radius: 50%;
+  color: red;
   padding: 5px 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .developer
