--- a/src/components/signIn.css
+++ b/src/components/signIn.css
@@ -9,7 +9,7 @@
     align-items: center;
     padding: 9px;
     padding-bottom: 0;
-    background-color: inherit;
+    background: inherit;
 }
 
 .logo
@@ -32,7 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -102,7 +102,6 @@ span
     justify-content: center;
     align-items: center;
     gap: 0.2em;
-    /* background-color: #46f407; */
 }
 
 .signIn-Nav
@@ -125,7 +124,7 @@ span
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.7);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     gap: 0.5em;
     cursor: pointer;
@@ -133,7 +132,7 @@ span
 
 .signIn-Nav button:focus
 {
-    background-color: silver;
+    background: silver;
     border: 2px solid silver;
 }
 
@@ -164,7 +163,7 @@ footer
     align-items: center;
     justify-content: center;
     gap: 0.5em;
-    background-color: inherit;
+    background: inherit;
 }
 
 .social-icons
@@ -182,7 +181,7 @@ footer
 .social-icons .social-fa 
 {
   border: 1px solid black;
-  background-color: inherit;
+  background: inherit;
   height: 18px;
   width: 18px;
   border-radius: 50%;
@@ -203,6 +202,7 @@ footer
   align-items: center;
   color: black;
   font-size: 80%;
+  color: rgba(0, 128, 0, 0.205);
 }
 
 
